--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -61,7 +61,7 @@
                     <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
                 </li>
                 <li>
-                    <input type="text" id = "txtLost" name="field6" class="field-select-small" placeholder="หาย" />&nbsp;<input type="text" id = "txtRepair" name="field7" class="field-select-small" placeholder="ซ่อม" />&nbsp;<input type="text" id = "txtBreak" name="field8" class="field-select-small" placeholder="ชำรุด" />
+                    <input type="text" id = "txtLost" name="field6" class="field-select-small" placeholder="หาย" disabled />&nbsp;<input type="text" id = "txtRepair" name="field7" class="field-select-small" placeholder="ซ่อม" disabled />&nbsp;<input type="text" id = "txtBreak" name="field8" class="field-select-small" placeholder="ชำรุด" disabled />
                 </li>
             </ul>
             <ul class="form-style-1">
