--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -185,7 +185,7 @@
                                                                 </select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="UnitWeight" class="input-1">
+                                                                <input type="text" id="UnitWeight" class="txtqty">
                                                             </td>
                                                             <td>
                                                                 <input type="text" id="Qty" class="Quantity txtqty" placeholder="0" onchange="CalSum()" />
@@ -216,7 +216,7 @@
                                                                 </select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="UnitWeight" class="input-1" />
+                                                                <input type="text" id="UnitWeight" class="txtqty" />
                                                             </td>
                                                             <td>
                                                                 <input type="text" id="Qty" class="Quantity txtqty" onchange="CalSum()" />
